--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css"
     />
+    <script defer data-domain="shopify-discount-link-generator.webprism.co" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     <main
