--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopify Discount Code URL Generator</title>
     <script src="//unpkg.com/alpinejs" defer></script>
+    <meta property="og:image" content="automatic-discounts-open-graph.jpg">
+    <meta property="og:title" content="Shopify Discount Code URL Generator. Made with ❤️ by webprism.">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css"
