--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,7 @@
     <script src="//unpkg.com/alpinejs" defer></script>
     <meta property="og:image" content="automatic-discounts-open-graph.jpg">
     <meta property="og:title" content="Shopify Discount Code URL Generator. Made with ❤️ by webprism.">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css"
@@ -67,13 +68,17 @@
       </div>
       <hr />
       <h2>Your discount code URL:</h2>
-      <code
+      <input
+        id="my_link"
         x-show="url && code"
-        x-text="
+        readonly
+        x-bind:value="
                 if(!redirect) { return url + '/discount/' + code }
                 else { return url + '/discount/' + code + '?redirect=' + redirect_path }
             "
-      ></code>
+      ></input>
+      <br><br>
+      <button onclick="copyLink()">Copy to clipboard</button>
     </main>
     <footer>
       <p>
@@ -84,4 +89,20 @@
       </p>
     </footer>
   </body>
+  <script>
+    function copyLink() {
+  // Get the text field
+  var copyText = document.getElementById("my_link");
+
+  // Select the text field
+  copyText.select();
+  copyText.setSelectionRange(0, 99999); // For mobile devices
+
+   // Copy the text inside the text field
+  navigator.clipboard.writeText(copyText.value);
+
+  // Alert the copied text
+  alert("Copied the text: " + copyText.value);
+}
+  </script>
 </html>
