--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  data-theme="dark">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +15,7 @@
     <script defer data-domain="shopify-discount-link-generator.webprism.co" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
+    <header style="background-color: white; padding: 0.5rem; text-align: center;"><a href="https://webprism.co" target="_blank">Click here to level up your Shopify store</a></header>
     <main
       x-data="{ url: 'https://example.com', code: 'WELCOME', redirect: false, redirect_path: '/collection/best-sellers' }"
     >
