update plug to full width

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     />
     <script defer data-domain="shopify-discount-link-generator.webprism.co" src="https://plausible.io/js/script.js"></script>
   </head>
+  <div style="background-color: white; padding: 0.5rem; text-align: center;"><a href="https://webprism.co" target="_blank">Click here to level up your Shopify store</a></div>
   <body>
-    <header style="background-color: white; padding: 0.5rem; text-align: center;"><a href="https://webprism.co" target="_blank">Click here to level up your Shopify store</a></header>
     <main
       x-data="{ url: 'https://example.com', code: 'WELCOME', redirect: false, redirect_path: '/collection/best-sellers' }"
     >
