add plausible event

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             "
       ></input>
       <br><br>
-      <button onclick="copyLink()">Copy to clipboard</button>
+      <button class="plausible-event-name=Copy+Link" onclick="copyLink()">Copy to clipboard</button>
     </main>
     <footer>
       <p>
